fix: added fixed navbar and added custom scrollbar

--- a/src/app.css
+++ b/src/app.css
@@ -32,3 +32,23 @@ span{
     border-radius: 6px;
     border-bottom: 4px solid #003A91;
 }
+
+/* custom scrollbar */
+::-webkit-scrollbar {
+    width: 20px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #d6dee1;
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #a8bbbf;
+  }
